# sarvamai-llm-failure-map

./: .gitignore  README.md  pyproject.toml
configs/: full_run.yaml  smoke_run.yaml
data/curated/: curated_dataset_v2.jsonl  smoke_20.jsonl
data/golden/: README.md  golden_candidates.jsonl  golden_set_v1.jsonl
data/predictions/full_v2/: gpt_4_1_nano__english.jsonl  gpt_4_1_nano__hinglish.jsonl  manifest.json  sarvam_30b__english.jsonl  sarvam_30b__hinglish.jsonl
data/predictions/full_v3/: gpt_4_1_nano__english.jsonl  gpt_4_1_nano__hinglish.jsonl  manifest.json  sarvam_30b__english.jsonl  sarvam_30b__hinglish.jsonl
data/predictions/smoke_test/: gpt_4o_mini__english.jsonl  gpt_4o_mini__hinglish.jsonl  manifest.json  sarvam_30b__english.jsonl  sarvam_30b__hinglish.jsonl
data/predictions/smoke_test_v2/: gpt_4_1_nano__english.jsonl  gpt_4_1_nano__hinglish.jsonl  manifest.json  sarvam_30b__english.jsonl  sarvam_30b__hinglish.jsonl
data/raw/: seed_hinglish_samples.jsonl
docs/: blog_outline.md  dataset_authoring_rules.md  dataset_spec.md  experiment_plan.md  failure_taxonomy.md  golden_set_rules.md  label_guidelines.md  runbook_smoke_test.md
outputs/comparisons/: manual_smoke_review.csv  manual_smoke_review.md  manual_smoke_summary.md
scripts/: build_report_assets.py  evaluate_outputs.py  make_dataset.py  mine_failures.py  run_models.py
src/code_switch_failure_map/: __init__.py  cli.py  config.py
tests/: test_aggregate.py  test_data_validate.py  test_failure_rules.py  test_model_interfaces.py  test_prompt_render.py  test_schemas.py
(+60 files in other folders)
