[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-switch-failure-map"
version = "0.1.0"
description = "Scaffold for code-switching failure map experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Code Switching Research Team" }]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "orjson>=3.9",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pytest>=8.0"
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10"]

[project.scripts]
csfm = "code_switch_failure_map.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
